# apperception

./: .dockerignore  .env  .env.leave  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  apperception_benchmark.py  apperception_example.ipynb  benchmark-accuracy.ipynb  codecov.yml  config.py  detection_estimation.ipynb  docker-compose.yml  environment.yml  lens.py  metadata_context.py  metadata_context_executor.py  metadata_util.py  multi_video_test.ipynb  new_apperception_benchmark.ipynb  object_tracker.py  performance-benchmark-without-estimation.ipynb  pyproject.toml  requirements.txt  road_ingest.ipynb  run-ablation.py  run.py  scenic_benchmark.py  scenic_equivelants.ipynb  scenic_equivelants.py  scenic_test.ipynb  setup.sh  strongsort-skip.py  tracker.py  tracking-results.ipynb  type.py  (+6 more)
.github/workflows/: check.yml  clean-up-and-format.yml  clean-up-ipynb.yml  examples.yml  format.yml  test-and-check.yml  test-pipeline.yml  test.yml  venv-cache.yml
__MACOSX/: ._monodepth2
apperception/: __init__.py  apperception_benchmark.py  bounding_box.py  box.py  camera.py  camera_config.py  database.py  example.db  layers.py  lens.py  metadata.py  metadata_context.py  metadata_context_executor.py  metadata_tests.py  metadata_util.py  mono_depth_estimator.py  new_apperception_benchmark.ipynb  new_apperception_benchmark.py  new_compute_lib.py  new_db.py  new_readme.md  new_util.py  new_world.py  object_tracker.py  object_tracker_2.py  object_tracker_yolov4_deepsort.py  object_tracker_yolov5_deepsort.py  point.py  predicate.py  query_type.py  road_ingest.py  road_network.py  scenic_benchmark.py  scenic_box.py  scenic_context.py  scenic_generate_df.py  scenic_util.py  scenic_video_context_executor.py  scenic_world.py  scenic_world_executer.py  (+9 more)
benchmarks/: Untitled.ipynb  apperception_benchmark.py  apperception_example.ipynb  extract_annotations_from_experiment.ipynb  extract_annotations_from_file.ipynb  ingest_scenic_data.py  new-api-scenic.ipynb  new-api-scenic.py  new_apperception_benchmark.ipynb  new_db_attribute.ipynb  partition_nuscenes.ipynb  road_ingest-2.ipynb  road_ingest.ipynb  scenic_benchmark.py  scenic_equivelants.ipynb  scenic_equivelants.py  scenic_test.ipynb  segment-tracking-accuracy.ipynb  test_parse_scenic_pred.py  test_queries.py
configs/: yolov4-config.py  yolov5-deepsort-config.yaml
data/: cameras.csv  item_general_trajectory.csv
data/evaluation/: ips.json
devkit/: apperception-queries-to-devkit.ipynb  compare_baseline.ipynb  devkit-pyscript.py  fig12_results.txt  fig13_results.txt  fig14_results.txt  fig15_results.txt
eva/: apperception_query.ipynb  eva-times-1.txt  eva_query.ipynb  eva_script.py  scene-names.txt
evadb_data/: evadb.db
examples/: inference_pipeline.py
nb-scripts/: add_attributes.ipynb  extract_annotations_from_nuscenes.ipynb  extract_frames_and_annotations.ipynb  ingest_data.ipynb  ingest_data_csv.ipynb
new_query_engine/: db.py  readme.md  world.py
optimization_playground/: detection_estimation.ipynb  detection_estimation.py  fig13_new_approach_playground.ipynb  generate_videos.ipynb  segment_mapping.py  segment_mapping_test.ipynb  streaming_detection.ipynb  streaming_detection.py  streaming_detection_test.ipynb  test-decoding.ipynb
optimized_ingestion/: README.md  __init__.py  __main__.py  cache.py  camera_config.py  camera_config_copy.py  depth_notebook.ipynb  frame.py  frame_collection.py  layers.py  metadata_json_encoder.py  mono_depth_estimator.py  monodepth.py  optimized_ingestion.ipynb  optimized_ingestion.py  payload.py  pipeline.py  sample_frame_tracker.py  types.py  video.py  video_compressed.py  video_skipped.py
pg_extender/: ahead.sql  angleBetween.sql  angleExcluding.sql  clean_items.sql  convertCamera.sql  distance.sql  facingRelative.sql  geoContained.sql  geoContainedMargin.sql  getX.sql  getY.sql  getZ.sql  get_X.sql  get_Y.sql  get_trajectory_by_camera.sql  headingAtTimestamp.sql  import_nuscenes.sql  in_view.sql  install.py  install.sql  materialize_reconcile.sql  merge_geo.sql  merge_trajectory.sql  minDistance.sql  objectBBox.sql  operators.sql  overlap.sql  reconcile_trajectory.sql  roadCoords.sql  roadDirection.sql  roadSegment.sql  sameRegion.sql  viewAngle.sql
playground/: _segment_tmp.py  ablation-accuracy.ipynb  ablation-benchmark.ipynb  ablation-de-heuristics.ipynb  ablation-performance-2.ipynb  ablation-performance-car.ipynb  ablation-performance.ipynb  ablation-run.ipynb  benchmark-accuracy.ipynb  benchmark-pipeline.ipynb  benchmark-strongsort-skip.ipynb  cache.py  detection_estimation.ipynb  detection_estimation_benchmarks.ipynb  detection_estimation_cdf_skip_ratio.ipynb  detection_estimation_runtime_skip_ratio.ipynb  detection_estimation_runtime_skip_ratio.py  fig13-end-to-end.ipynb  fig13-performance-benchmark-with-estimation.ipynb  fig13_new_approach_playground.ipynb  fig14-benchmark.ipynb  fig14-end-to-end.ipynb  fig15-end-to-end.ipynb  inview-benchmark.ipynb  inview-run.ipynb  only-road-ingest.ipynb  performance-benchmark-with-estimation.ipynb  performance-benchmark-without-estimation.ipynb  python-test.ipynb  run-3d-estimator.ipynb  run-ablation.ipynb  run-ablation.py  run-all  run-all.ipynb  run-all.py  run-inview.ipynb  run-strongsort-cache-correctness.ipynb  run-strongsort-cache.ipynb  run-strongsort-ecc-portion.ipynb  run-strongsort-skip.ipynb  (+15 more)
scripts/: commit-and-push-if-latest.sh  commit-and-push.sh  fake-images.py  generate_pg_extender.py  import_tables.py  ingest_data.ipynb  ingest_data.py  ingest_data_from_file.ipynb  ingest_data_from_file.py  ingest_road.ipynb  ingest_road.py
spatialyze/: database.py  geospatial_video.py  road_network.py  world.py
tests/: test_database.py  test_predicate.py  test_world.py
tests-scenic/: test_fig_12.py  test_fig_13.py  test_fig_14.py  test_fig_15.py  test_fig_16.py
(+430 files in other folders)
