[tool.poetry]
name = "apperception"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyPika = "^0.48.9"
pyquaternion = "^0.9.9"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
opencv-python = "^4.6.0"
pandas = "^1.4.2"
psycopg2-binary = "^2.9.3"
notebook = "^6.4.12"
bitarray = "^2.6.0"
tqdm = "^4.64.1"
python-mobilitydb = "^0.1.2"
postgis = "^1.0.4"

[tool.poetry.group.dev.dependencies]
mypy = "^0.961"
types-psycopg2 = "^2.9.16"
pyright = "^1.1.253"
notebook = "^6.4.12"
pytest = "^7.1.2"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
verbose = true

[tool.autopep8]
in-place = true
recursive = true
aggressive = 3
verbose = 2

[tool.mypy]
exclude = [
  'trackers/object_tracker_yolov4_deepsort\.py',
  'trackers/object_tracker_yolov5_deepsort\.py',
  'legacy/.*',
  'video_util\.py',
  'scenic_util\.py',
]

[[tool.mypy.overrides]]
module = [
  'pandas',
  'pypika',
  'pypika.dialects',
  'pypika.functions',
  'cv2',
  'pyquaternion',
  'pyquaternion.quaternion',
  'postgis.psycopg',
  'mobilitydb.psycopg',
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = '3.10'
ignore = [
  'apperception/legacy/*',
  'apperception/video_util.py',
  'apperception/trackers/object_tracker_yolov4_deepsort.py',
  'apperception/trackers/object_tracker_yolov5_deepsort.py',
]
